@@ -1,7 +1,9 @@
 Joose.Managed.My = new Joose.Managed.Role('Joose.Managed.My', {
     
     have : {
-        myClass                         : null
+        myClass                         : null,
+        
+        needToReAlias                   : false
     },
     
     
@@ -23,24 +25,53 @@ Joose.Managed.My = new Joose.Managed.Role('Joose.Managed.My', {
             var createdClass = this.myClass = Class(myExtend)
             
             this.c.prototype.my = this.c.my = isRole ? createdClass : new createdClass({ HOST : this.c })
+            
+            this.needToReAlias = true
+        },
+        
+        
+        aliasStaticMethods : function () {
+            this.needToReAlias = false
+            
+            var c           = this.c
+            var myProto     = this.myClass.prototype
+            
+            this.myClass.meta.stem.properties.methods.each(function (method, name) {
+                var alias = c[ name ]
+                
+                if (alias && alias.IS_ALIAS) delete c[ name ]
+                
+                if (!c[ name ])
+                    (c[ name ] = function () {
+                        return myProto[ name ].apply(c.my, arguments)
+                    }).IS_ALIAS = true
+            })
         }
     },
     
     
-    before : {
+    override : {
         
         extend : function (props) {
             if (!this.myClass && this.superClass.meta.myClass) this.createMy(props)
             
-            if (props.my)
+            if (props.my) {
                 if (!this.myClass) 
                     this.createMy(props)
                 else {
                     this.myClass.meta.extend(props.my)
                     delete props.my
                 }
-        },
-        
+            }
+            
+            this.SUPER(props)
+            
+            if (this.needToReAlias && !(this instanceof Joose.Managed.Role)) this.aliasStaticMethods()
+        }  
+    },
+    
+    
+    before : {
         
         addRole : function () {
             var myStem
@@ -67,7 +98,11 @@ Joose.Managed.My = new Joose.Managed.Role('Joose.Managed.My', {
                 }
             }, this)
             
-            if (myStem) myStem.close()
+            if (myStem) {
+                myStem.close()
+                
+                this.needToReAlias = true
+            }
         },
         
         
@@ -78,7 +113,11 @@ Joose.Managed.My = new Joose.Managed.Role('Joose.Managed.My', {
             myStem.open()
             
             Joose.A.each(arguments, function (role) {
-                if (role.meta.meta.hasAttribute('myClass') && role.meta.myClass) myStem.removeComposeInfo(role.my.meta.stem)
+                if (role.meta.meta.hasAttribute('myClass') && role.meta.myClass) {
+                    myStem.removeComposeInfo(role.my.meta.stem)
+                    
+                    this.needToReAlias = true
+                }
             }, this)
             
             myStem.close()
