@@ -45,17 +45,26 @@ To access static properties "outside" of class context, use `my` property of its
         
         TypeRegistry.my.types['someTypeName']
         
-        TypeRegistry.my.registerType('textfield', Ext.form.TextField) 
+        TypeRegistry.my.registerType('textfield', Ext.form.TextField)
         
+         
+Static methods are also aliased to the constructor, so you can call them directly, w/o `my`:
+
+        TypeRegistry.registerType('textfield', Ext.form.TextField)
         
-Inside the method of class you can access static properties via `my` as well: 
+
+Inside of *static* methods, *static* attributes are available via `this`. Inside of the *usual* methods, *static* properties are available via `my`: 
 
         Class('TypeRegistry', {
         
             my : {
+                has : {
+                    types : Joose.I.Object
+                }
+            
                 methods : {
                     registerType : function (type, value) {
-                        ....
+                        this.types[ type ] = value
                     }
                 }
             },
@@ -64,6 +73,8 @@ Inside the method of class you can access static properties via `my` as well:
             
                 someMethod : function () {
                     this.my.registerType('someTypeName', someValue)
+                    
+                    this.my.types[ 'someType' ]
                 }
             }
         })
