@@ -64,8 +64,9 @@
                 '054_meta_roles.t.js',
                 '055_role_to_instance_application.t.js',
                 '060_modules.t.js',
-                '070_reflection.t.js',
-                '080_non_joose_inheritance.t.js'
+                '070_reflection.t.js'
+                //,
+                //'080_non_joose_inheritance.t.js'
             )
         </script>
     </body>
